--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav {
   display: flex;
   justify-content: space-between;
   /* justify-items: center; */
-  width: 60%;
+  width: 176px; /* 51% mobile view */
 }
 li {
   list-style: none;
@@ -47,17 +47,21 @@ li {
 a {
   text-decoration: none;
 }
+.navlist__header__links {
+  font-size: 0.75rem;
+  color: #07043b;
+}
 .hero {
   width: 85.5%;
-  margin: 74px auto 0;
+  margin: 100px auto 0;
 }
 .hero__img {
   background-image: url("../images/illustration-1.svg");
-  width: 100%;
+  width: 95%;
   height: 225px;
   max-height: 100%;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: 50% 50%;
 }
 .hero__signup {
@@ -65,7 +69,7 @@ a {
 }
 .hero__signup__title {
   font-weight: 700;
-  font-family: "Open Sans", sans-serif;
+  /*font-family: "Open Sans", sans-serif;*/
   font-size: 1.5rem;
   text-align: center;
   line-height: 36px;
@@ -76,6 +80,7 @@ a {
   line-height: 21px;
   text-align: center;
   width: 92.5%;
+  color: #07043b;
 }
 form {
   margin-top: 32px;
@@ -124,12 +129,20 @@ form {
   color: #3da08f;
   width: 100%;
 }
+.productive__container {
+  background-image: url("./images/bg-curve-mobile.svg"); 
+  background-repeat: no-repeat;
+  background-size: 580% 100%;
+  background-position: 50% 50%;
+}
 .productive__image {
-  background-image: url("./images/bg-curve-mobile.svg");
-  width: 100%;
+  /*
+  background-image: url("./images/bg-curve-mobile.svg"); 
   background-repeat: no-repeat;
   background-size: 251% 100%;
   background-position: 50% 50%;
+  */
+  width: 100%;
   position: relative;
   padding-top: 93px;
 }
@@ -167,14 +180,15 @@ form {
 
 .card {
   width: 74.8%;
+  max-width: 356px;
   margin: 40px auto;
-  border: none; 
+  border: none;
   background-color: white;
 }
 .card__quorte {
   position: relative;
-padding-top: 28px;
-padding-left: 26px
+  padding-top: 28px;
+  padding-left: 26px;
 }
 
 .card__quorte::before {
@@ -188,34 +202,33 @@ padding-left: 26px
   left: 25px;
 }
 .card__quorte__summary {
-	font-size: 0.625rem;
-	letter-spacing: 0.38px;
-	line-height: 18.1px;
+  font-size: 0.625rem;
+  letter-spacing: 0.38px;
+  line-height: 18.1px;
   color: #04073b;
   margin-top: 18px;
 }
 .card__profile__img {
   width: 24px;
   border-radius: 50%;
-  
 }
 .card__profile__title {
-	font-size: 0.56rem;
-	font-weight: 700;
-	letter-spacing: 0.45px;
-	/* line-height: auto; */
-	font-family: "Open sans", sans-serif;
+  font-size: 0.56rem;
+  font-weight: 700;
+  letter-spacing: 0.45px;
+  /* line-height: auto; */
+  font-family: "Open sans", sans-serif;
 }
 .card__profile__subtitle {
-	font-size: 0.375rem;
-	letter-spacing: 0.3px;
-	line-height: 11.8px;
+  font-size: 0.375rem;
+  letter-spacing: 0.3px;
+  line-height: 11.8px;
 }
 .card__profile {
-	width: 105px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  width: 105px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: nowrap;
   margin-top: 12px;
   padding-bottom: 15px;
@@ -224,28 +237,28 @@ padding-left: 26px
 .footer__signup {
   background-color: #575988;
   color: white;
-  
 }
 .footer__hero__signup__title {
-	padding-top: 14px;
-	font-size: 1rem;
-	line-height: 24px;
+  padding-top: 14px;
+  font-size: 1rem;
+  line-height: 24px;
 }
 .footer__hero__signup__summary {
-	width: 74.8%;
+  width: 74.8%;
+  color: white;
 }
 .footer__form {
   padding-bottom: 71px;
 }
 .main__footer {
-	background-color: #07043b;
-	color: white;
+  background-color: #07043b;
+  color: white;
   padding-top: 65px;
   padding-bottom: 42px;
 }
-.footer__logo__img {  
-  transform: scale(.64);
-  margin-left: 10px; 
+.footer__logo__img {
+  transform: scale(0.64);
+  margin-left: 10px;
 }
 .footer__logo__img path {
   fill: white;
@@ -259,46 +272,267 @@ padding-left: 26px
 }
 
 .phone__email {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	row-gap: 16px;
-	justify-content: left;
-	align-items: baseline;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  row-gap: 16px;
+  justify-content: left;
+  align-items: baseline;
 }
-.phone, .email__data {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	column-gap: 16px;
+.phone,
+.email__data {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  column-gap: 16px;
 }
 .aboutus {
-	margin-top: 32px;
+  margin-top: 32px;
 }
 .navlist__footer {
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  row-gap: 16px;
+}
+.contactus {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+.socials {
+  display: flex;
+  column-gap: 9px;
+  width: 104px;
+  margin: auto;
+}
+.social__links {
+  width: 28.04px;
+  height: 27px;
+  border: 1px solid white;
+  margin: auto;
+  /* display: block ruby; */
+  line-height: 27px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 478px) {
+  /* footer section - controlled by grid auto complete */
+  .aboutus {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 678px) {
+  /* header and nav */
+  nav {    
+    width: 88.9%;
+    margin: 65px auto;     
+}
+.logo {
+	width: 102px;
+}
+
+.navlist__header__links {
+	font-size: 0.9rem;
+}
+.navlist {	
+	width: 271px;
+}
+  /* Main section*/
+  /* hero section */
+  .hero {
+    width: 88.9%;
+    margin: 86px 45px 0;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+justify-content: space-around;
+  }
+  .hero__img {
+    background-image: url("../images/illustration-1.svg");
+    width: 50%;
+    height: 474px;
+    max-height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 50% 50%;
+  }
+  .hero__signup {
+    padding-top: 50px;
+    width: 49%;
+  }
+
+.hero__signup__title {
+	text-align: left;
+	font-size: 1.7rem;
+}
+
+.hero__signup__summary {
+	font-size: 0.95rem;
+	text-align: left;
+	margin: 24px 0 0;
+	line-height: 24px;
+	letter-spacing: 0.53px;
+}
+
+  .productive__container {   
+    background-size: 580% 100%;
+    background-position: 50% 50%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+.productive__details {  
+  padding-top: 103px;
+  background-color: inherit;
+  padding-bottom: 30px;
+  width: 45%;
+  margin-left: 80px;
+}
+.productive__title {
+  text-align: left;
+  font-size: 2rem;
+  line-height: auto;
+  color: #07043b;
+  line-height: 40px;
+}
+
+.productive__summary {
+  text-align: left;
+  margin-left: 0;
+  font-size: 0.95rem;
+  line-height: 24px;
+}
+.productive__image {	
+	width: 45%;	
+}
+.productive__btn {
+  margin-left: 0;
+}
+.card {
+	margin-left: 0;
+}
+
+.card__quorte::before {  
+  width: 18px;
+  height: 68px;  
+}
+
+.card__quorte__summary {
+  font-size: 0.81rem;
+   line-height: 23px;  
+}
+.card__profile__img {
+  width: 32px; 
+}
+.card__profile {
+  width: 137px;
+  
+}
+.card__profile__title {
+  font-size: 0.69rem; 
+  letter-spacing: 0.55px;
+  }
+  .card__profile__subtitle {
+    font-size: 0.5rem;
+    letter-spacing: 0.3px;
+    line-height: 15px;
+    font-weight: 400;
+  }
+.hero__signup__info {
+  width: 45%;
+  padding-left: 46px;
+}
+.hero__form {
+	width: 93.3%;
+	align-items: self-start;
+}
+
+.email {
+	width: 265px;
+	padding: 21px 10px;
+	font-size: 0.8px;
+	/* margin-left: 0; */
+}
+.btnSubmit {
+  width: 200px;  
+}
+
+  .footer__form {
+    width: 33.4%;
+    align-items: flex-start;
+  }
+
+.footer__email {
+	width: 100%;
+}
+.footer__hero__signup {
 	width: 100%;
 	display: flex;
 	flex-wrap: nowrap;
-	flex-direction: column;
-	row-gap: 16px;
+  justify-content: space-around;  
+  padding-bottom: 46px;
 }
+.footer__hero__signup__title {
+  padding-top: 40px;
+  font-size: 2rem;
+  line-height: 48px;
+}
+.footer__hero__signup__summary {
+  font-size: 1rem;
+}
+ /* footer section - controlled by grid auto complete */ 
 .contactus {
-	margin-top: 32px;
-	margin-bottom: 32px;
+  margin-top: 0;
 }
-.socials {
-	display: flex;
-	column-gap: 9px;
-	width: 104px;
-	margin: auto;
+.main__footer {
+	padding-left: 80px;
+	padding-right: 80px;
 }
-.social__links {
-	width: 28.04px;
-	height: 27px;
-	border: 1px solid white;
-	margin: auto;
-	/* display: block ruby; */
-	line-height: 27px;
-	text-align: center;
-	border-radius: 50%;
+@media screen and (min-width: 878px) {
+  /* footer section - controlled by grid auto complete */ 
+  .socials {
+    margin-top: 0;
+  }
 }
+
+@media screen and (min-width: 1078px) {
+  /*header and nav */
+  .logo {
+    width: 166px;
+  }
+  .navlist__header__links {
+    font-size: 1rem;
+  }
+  /*main */
+  .hero__signup__title {  
+    font-size: 2.5rem;
+}
+.hero__signup__summary {
+	font-size: 1.065rem;	
+}
+.hero__form {	
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+}
+.email {
+	width: 320px;
+	font-size: 0.875rem;
+	padding: 21px 10px;	
+}
+.productive__summary {  
+  font-size: 1rem;  
+}
+.footer__hero__signup {	
+  padding-right: 46px;
+  padding-bottom: 0;
+}
+.btnSubmit { 
+  padding: 21px 10px;  
+}
+
+}
+
