--- a/style.css
+++ b/style.css
@@ -507,8 +507,12 @@ justify-content: space-around;
     font-size: 1rem;
   }
   /*main */
+  .hero {    
+    margin: 86px 80px 0;   
+  }
   .hero__signup__title {  
-    font-size: 2.5rem;
+    font-size: 2.4rem;
+line-height: 60px;
 }
 .hero__signup__summary {
 	font-size: 1.065rem;	
