feat: large screens control max width

--- a/style.css
+++ b/style.css
@@ -704,3 +704,10 @@ form {
   }
   /* ===== END OF VALIDATION ======= */
 }
+@media screen and (min-width: 1600px) {
+  .wrapper {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1600px;
+  }
+}
